캘린더 구현

--- a/index.html
+++ b/index.html
@@ -1,20 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div id="app">
         <header>
-            <div class="logo"><img src="./" alt=""></div>
-            <nav>
-                
-            </nav>
+            <div class="container">
+                <nav>
+                    <div class="menu flex">
+                        <div class="item">
+                            <div>
+                                <a href="index.html">HOME</a>
+                            </div>
+
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">아파트 소개</a>
+                            </div>
+                            <div class="sub_menu">
+                                <div><a href="">단지 안내</a></div>
+                                <div><a href="">단지 배치도</a></div>
+                                <div><a href="">평면도</a></div>
+                                <div><a href="">커뮤니티 시설</a></div>
+                                <div><a href="">오시는 길</a></div>
+                            </div>
+
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">대표회의</a>
+                            </div>
+                            <div class="sub_menu">
+                                <div><a href="">회장 인사말</a></div>
+                                <div><a href="">대표회 구성</a></div>
+                                <div><a href="">공지사항</a></div>
+                                <div><a href="">추지현황</a></div>
+                                <div><a href="">규정 및 규약</a></div>
+                            </div>
+
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">입주민 공간</a>
+                            </div>
+                            <div class="sub_menu">
+                                <div><a href="">자유게시판</a></div>
+                                <div><a href="">갤러리</a></div>
+                                <div><a href="">생활상식</a></div>
+                                <div><a href="">행사 안내</a></div>
+                                <div><a href="">민원 관리</a></div>
+                            </div>
+                        </div>
+                        <div class="logo">
+                            <img src="./imgs/logo.png" alt="logo">
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">선거/투표</a>
+                            </div>
+                            <div class="sub_menu">
+                                <div><a href="">상가</a></div>
+                                <div><a href="">관공서</a></div>
+                                <div><a href="">교육</a></div>
+                                <div><a href="">문화</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">주변정보</a>
+                            </div>
+                            <div class="sub_menu">
+                                <div><a href="">스크린 골프</a></div>
+                                <div><a href="">도서실</a></div>
+                                <div><a href="">조식</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">예약관리</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div>
+                                <a href="">마이페이지</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </header>
     </div>
 </body>
+
 </html>
