--- a/대회문제/index.html
+++ b/대회문제/index.html
@@ -18,6 +18,9 @@
             <div>
                 <nav>
                     <div class="menu flex">
+                        <div class="logo">
+                            <img src="./imgs/logo.png" alt="logo">
+                        </div>
                         <div class="item">
                             <div>
                                 <a href="index.html">HOME</a>
@@ -29,11 +32,17 @@
                             </div>
                             <div class="sub_menu">
                                 <div class=" grid">
-                                    <div><a href="">단지 안내</a></div>
-                                    <div><a href="">단지 배치도</a></div>
-                                    <div><a href="">평면도</a></div>
-                                    <div><a href="">커뮤니티 시설</a></div>
-                                    <div><a href="">오시는 길</a></div>
+                                    <div class="r_item">
+                                        <h2>아파트 소개</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                        <div><a href="">단지 안내</a></div>
+                                        <div><a href="">단지 배치도</a></div>
+                                        <div><a href="">평면도</a></div>
+                                        <div><a href="">커뮤니티 시설</a></div>
+                                        <div><a href="">오시는 길</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -43,11 +52,17 @@
                             </div>
                             <div class="sub_menu">
                                 <div class=" grid">
-                                    <div><a href="">회장 인사말</a></div>
-                                    <div><a href="">대표회 구성</a></div>
-                                    <div><a href="">공지사항</a></div>
-                                    <div><a href="">추지현황</a></div>
-                                    <div><a href="">규정 및 규약</a></div>
+                                    <div class="r_item">
+                                        <h2>대표회의</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                        <div><a href="">회장 인사말</a></div>
+                                        <div><a href="">대표회 구성</a></div>
+                                        <div><a href="">공지사항</a></div>
+                                        <div><a href="">추지현황</a></div>
+                                        <div><a href="">규정 및 규약</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -56,18 +71,30 @@
                                 <a href="">입주민 공간</a>
                             </div>
                             <div class="sub_menu">
-                                <div class=" grid">
-                                    <div><a href="">자유게시판</a></div>
-                                    <div><a href="">갤러리</a></div>
-                                    <div><a href="">생활상식</a></div>
-                                    <div><a href="">행사 안내</a></div>
-                                    <div><a href="">민원 관리</a></div>
+                                <div class="grid">
+                                    <div class="r_item">
+                                        <h2>입주민 공간</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                            <div><a href="">자유게시판</a></div>
+                                            <div><a href="">갤러리</a></div>
+                                            <div><a href="">생활상식</a></div>
+                                            <div>
+                                                <a href="">행사 안내</a>
+                                                <div class="l_sub ">
+                                                    <div>이달의 행사</div>
+                                                    <div>연간 행사</div>
+                                            </div>
+                                            </div>
+                                            <div><a href="">민원 관리</a></div>
+                                    
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
-                        <div class="logo">
-                            <img src="./imgs/logo.png" alt="logo">
-                        </div>
+
                         <div class="item">
                             <div>
                                 <a href="">선거/투표</a>
@@ -79,10 +106,16 @@
                             </div>
                             <div class="sub_menu">
                                 <div class=" grid">
-                                    <div><a href="">상가</a></div>
-                                    <div><a href="">관공서</a></div>
-                                    <div><a href="">교육</a></div>
-                                    <div><a href="">문화</a></div>
+                                    <div class="r_item">
+                                        <h2>주변정보</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                        <div><a href="">상가</a></div>
+                                        <div><a href="">관공서</a></div>
+                                        <div><a href="">교육</a></div>
+                                        <div><a href="">문화</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -92,9 +125,15 @@
                             </div>
                             <div class="sub_menu">
                                 <div class=" grid">
-                                    <div><a href="">스크린 골프</a></div>
-                                    <div><a href="">도서실</a></div>
-                                    <div><a href="">조식</a></div>
+                                    <div class="r_item">
+                                        <h2>예약관리</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                        <div><a href="">스크린 골프</a></div>
+                                        <div><a href="">도서실</a></div>
+                                        <div><a href="">조식</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -104,9 +143,15 @@
                             </div>
                             <div class="sub_menu">
                                 <div class=" grid">
-                                    <div><a href="">공과금 사용량 조회</a></div>
-                                    <div><a href="">관리비 조회</a></div>
-                                    <div><a href="">CCTV 조회</a></div>
+                                    <div class="r_item">
+                                        <h2>마이페이지</h2>
+                                        <p>GRAND PALACE SINCE 1985</p>
+                                    </div>
+                                    <div class="l_item flex">
+                                        <div><a href="">공과금 사용량 조회</a></div>
+                                        <div><a href="">관리비 조회</a></div>
+                                        <div><a href="">CCTV 조회</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
