--- a/대회문제/index.html
+++ b/대회문제/index.html
@@ -35,6 +35,9 @@
                                     <div class="r_item">
                                         <h2>아파트 소개</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
                                         <div><a href="">단지 안내</a></div>
@@ -55,6 +58,9 @@
                                     <div class="r_item">
                                         <h2>대표회의</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
                                         <div><a href="">회장 인사말</a></div>
@@ -75,20 +81,30 @@
                                     <div class="r_item">
                                         <h2>입주민 공간</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
-                                            <div><a href="">자유게시판</a></div>
-                                            <div><a href="">갤러리</a></div>
-                                            <div><a href="">생활상식</a></div>
-                                            <div>
-                                                <a href="">행사 안내</a>
-                                                <div class="l_sub ">
-                                                    <div>이달의 행사</div>
-                                                    <div>연간 행사</div>
+                                        <div><a href="">자유게시판</a></div>
+                                        <div><a href="">갤러리</a></div>
+                                        <div><a href="">생활상식</a></div>
+                                        <div>
+                                            <a href="">행사 안내</a>
+                                            <div class="l_sub ">
+                                                <div><a href="">이달의 행사</a></div>
+                                                <div><a href="">연간 행사</a></div>
                                             </div>
+                                        </div>
+                                        <div><a href="">민원 관리</a>
+                                            <div class="l_sub ">
+                                                <div><a href="">시설 민원</a></div>
+                                                <div><a href="">일반 민원</a></div>
+                                                <div><a href="">보안 민원</a></div>
+                                                <div><a href="">청소 민원</a></div>
                                             </div>
-                                            <div><a href="">민원 관리</a></div>
-                                    
+                                        </div>
+
                                     </div>
 
                                 </div>
@@ -109,6 +125,9 @@
                                     <div class="r_item">
                                         <h2>주변정보</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
                                         <div><a href="">상가</a></div>
@@ -128,6 +147,9 @@
                                     <div class="r_item">
                                         <h2>예약관리</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
                                         <div><a href="">스크린 골프</a></div>
@@ -146,6 +168,9 @@
                                     <div class="r_item">
                                         <h2>마이페이지</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
+                                        <div class="img_box mark">
+                                            <img src="./imgs/logo.png" alt="logo">
+                                        </div>
                                     </div>
                                     <div class="l_item flex">
                                         <div><a href="">공과금 사용량 조회</a></div>
@@ -159,7 +184,47 @@
                 </nav>
             </div>
         </header>
+        <section id="slide">
+            <div class="slide">
+                <div class="slide_items flex">
+                    <div class="item">
+                        <div class="img_box"><img src="./imgs/img (1).jpg" alt="slideimg"></div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box"><img src="./imgs/img (2).jpg" alt="slideimg"></div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box"><img src="./imgs/img (3).jpg" alt="slideimg"></div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box"><img src="./imgs/img (1).jpg" alt="slideimg"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <div class="grid footer">
+                    <div class="r_item flex">
+                        <div class="img_box"><img src="./imgs/logo.png" alt="logo"></div>
+                        <p>서울특별시 용산구 이태원로 15길</p>
+                        <p>051)0421-4245</p>
+                        <p>GRAND PALCE</p>
+                    </div>
+                    <div class="l_item flex">
+                        <div class="content">저작권 정보</div>
+                        <div class="content">이용안내</div>
+                        <div class="content">개인정보 처리 방침</div>
+                        <div class="content">저작권 보호정책</div>
+                        <div class="content">도로명 주소안내</div>
+                        <div class="content">사이트 오류 신고</div>
+                    </div>
+                </div>
+                <div class="copy">Copyright (C)2022 Korea University. All Rights Reserved</div>
+            </div>
+        </footer>
     </div>
+
 </body>
 
 </html>
